# ultrafastfilesearch

./: .geiger.toml  .gitattributes  .gitignore  .gitmessage  .reuseignore  .taplo.toml  .typos.toml  ANVIL_FOLLOWUP.md  CHANGELOG.md  CHAOS_TEST_HARNESS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FORGE_FOLLOWUP.md  INTENT_PROMPT.md  LICENSE  README.md  REUSE.toml  SECURITY.md  SPDXLICENSES  TRADEMARK.md  audit.toml  benchmark-cache.ps1  cliff.toml  clippy.toml  codecov.yml  deny.toml  install.sh  justfile  missing_paths.txt  mutants.toml  release-plz.toml  rust-toolchain.toml  rustc-ice-2026-03-20T20_41_22-82962.txt  rustfmt.toml  test_runs.ps1  trial_run.ps1
crates/uffs-bench/: Cargo.toml
crates/uffs-bench/src/: baseline.rs  bundle.rs  cards.rs  charts.rs  cli.rs  competitors.rs  env.rs  error.rs  fingerprint.rs  gate.rs  lib.rs  main.rs  matrix.rs  preflight.rs  report.rs  resolve.rs  restore.rs  run.rs  run_state.rs  stages.rs  state.rs  storage.rs  summary.rs  teardown.rs  tooling.rs
crates/uffs-bench/src/env/: tests.rs
crates/uffs-bench/src/host/: mock.rs  mod.rs  system.rs
crates/uffs-bench/src/preflight/: mod.rs  tests.rs
crates/uffs-bench/src/run/: bootstrap.rs  daemon.rs  es_instance.rs  mod.rs  specs.rs  stage_meta.rs  tests.rs
crates/uffs-bench/tests/: spine.rs
crates/uffs-broker/: Cargo.toml
crates/uffs-broker-protocol/: Cargo.toml
crates/uffs-broker-protocol/src/: lib.rs
crates/uffs-broker/src/: broker.rs  lib.rs  main.rs  protocol.rs
crates/uffs-broker/src/broker/: authenticode.rs  control.rs  owned_handle.rs  pipe.rs  process_handle.rs  service.rs
crates/uffs-cli/: Cargo.toml  README.md  app.manifest  build.rs  console
crates/uffs-cli/src/: args.rs  commands.rs  dispatch.rs  main.rs  search_retry.rs
crates/uffs-cli/src/commands/: aggregate.rs  daemon_load.rs  daemon_mgmt.rs  daemon_tiering.rs  index.rs  info.rs  json_helpers.rs  output.rs  output_tests.rs  raw_io.rs  raw_io_windows.rs  search.rs  stats.rs  streaming.rs  system_status.rs
crates/uffs-cli/tests/: cli_integration.rs
crates/uffs-client/: Cargo.toml  README.md
crates/uffs-client/src/: broker_probe.rs  connect.rs  connect_logging.rs  connect_platform.rs  connect_sync.rs  connect_sync_autostart.rs  connect_sync_platform.rs  connect_sync_tests.rs  connect_sync_tiering.rs  connect_tests.rs  daemon_child.rs  daemon_ctl.rs  daemon_spawn.rs  error.rs  format.rs  lib.rs  mcp_pid.rs  shmem.rs  shmem_tests.rs  stdout_kind.rs  verify.rs  windows_deadline.rs
crates/uffs-client/src/protocol/: aggregate_wire.rs  cli_args.rs  cli_args_helpers.rs  mod.rs  response.rs  response_status.rs  tests.rs  (+2 more)
crates/uffs-core/: Cargo.toml
crates/uffs-core/benches/: apply_cost.rs  overlay_read.rs  query.rs  search_benchmarks.rs
crates/uffs-core/src/: bloom.rs  compact.rs  compact_cache.rs  compact_filters.rs  compact_loader.rs  compact_loader_path_oracle_tests.rs  compact_loader_tests.rs  compact_loader_trigram_oracle_tests.rs  compact_mmap.rs  compact_reader.rs  compact_storage.rs  compact_tests.rs  compact_trigram_delta_tests.rs  compiled_pattern.rs  error.rs  export.rs  extensions.rs  glob.rs  index_search.rs  lib.rs  output.rs  path_resolver.rs  path_trie.rs  pattern.rs  query.rs  slot_pool.rs  tree.rs  trigram.rs  trigram_key.rs
crates/uffs-core/tests/: filetime_output_parity.rs
crates/uffs-daemon/: Cargo.toml  build.rs
crates/uffs-daemon/src/: broker_client.rs  config.rs  events.rs  handler.rs  handler_blob.rs  handler_csv_blob_tests.rs  handler_parse_search_params.rs  handler_parse_search_params_tests.rs  handler_paths_blob_tests.rs  ipc.rs  lib.rs  lifecycle.rs  log_init.rs  main.rs  runtime_orphans.rs  shutdown.rs  startup.rs  telemetry.rs  tests.rs
crates/uffs-daemon/tests/: ipc_integration.rs
crates/uffs-diag/: Cargo.toml
crates/uffs-diag/src/: lib.rs  uffs_mft_helpers_windows.rs
crates/uffs-format/: Cargo.toml
crates/uffs-format/src/: attr.rs  column.rs  config.rs  datetime.rs  derived.rs  footer.rs  lib.rs  row.rs  writer.rs
crates/uffs-gui/: Cargo.toml
crates/uffs-gui/src/: main.rs
crates/uffs-legacy/: Cargo.toml
crates/uffs-legacy/src/: lib.rs  main.rs
crates/uffs-mcp/: Cargo.toml  README.md
crates/uffs-mcp/src/: cookbook.rs  error.rs  http.rs  lib.rs  lib_tests.rs  main.rs  main_tests.rs  process.rs  resources.rs  roots.rs  schemas.rs  stats.rs  text.rs
crates/uffs-mcp/tests/: mcp_protocol.rs
crates/uffs-mft/: Cargo.toml  README.md
crates/uffs-mft/benches/: mft_read.rs
crates/uffs-mft/fuzz/: Cargo.toml
crates/uffs-mft/src/: cache.rs  cache_compress.rs  cache_dataframe.rs  cli.rs  cpp_io_pipeline.rs  cpp_tree.rs  cpp_tree_improved_1.rs  cpp_tree_improved_2.rs  cpp_tree_improved_3.rs  cpp_types.rs  display.rs  error.rs  flags.rs  frs.rs  index.rs  index_improved_1.rs  index_improved_2.rs  index_improved_3.rs  io.rs  lib.rs  logging.rs  main.rs  ntfs.rs  parity_tests.rs  parse.rs  platform.rs  progress.rs  raw.rs  raw_iocp.rs  reader.rs  tree_metrics.rs  usn.rs
crates/uffs-polars/: Cargo.toml
crates/uffs-polars/src/: lib.rs
crates/uffs-security/: Cargo.toml
crates/uffs-security/src/: authenticode.rs  crypto.rs  fs.rs  keystore.rs  lib.rs  log_dir.rs  pipe.rs  runtime_dir.rs
crates/uffs-text/: Cargo.toml  README.md
crates/uffs-text/src/: case_fold.rs  lib.rs
crates/uffs-time/: Cargo.toml  README.md
crates/uffs-time/src/: lib.rs
crates/uffs-tui/: Cargo.toml
crates/uffs-tui/src/: app.rs  backend.rs  main.rs
crates/uffs-update/: Cargo.toml  app.manifest  build.rs
crates/uffs-update/src/: acquire.rs  apply.rs  doctor.rs  github.rs  journal.rs  main.rs  orchestrate.rs  plan.rs  proc.rs  quiesce.rs  recover.rs  restore.rs  verify.rs
crates/uffs-winsvc/: Cargo.toml
crates/uffs-winsvc/src/: lib.rs  stub.rs  windows.rs
scripts/ci-pipeline/: Cargo.toml
scripts/ci-pipeline/src/: changelog.rs  cli.rs  context.rs  cross_check.rs  exec.rs  git_ops.rs  main.rs  phases.rs  ship.rs  version.rs  workflow.rs
scripts/ci/gen-hooks/: Cargo.toml
scripts/ci/gen-workflow/: Cargo.toml
scripts/ci/manifest-audit/: Cargo.toml
(+908 files in other folders)
