# ============================================================================
# UltraFastFileSearch-Rust Workspace
# ============================================================================
# A high-performance file search tool using direct MFT reading and Polars
# for data processing.
# ============================================================================

[workspace]
resolver = "2"
members = [
    "crates/uffs-polars",   # Polars facade (compilation isolation)
    "crates/uffs-mft",      # MFT reading → Polars DataFrame
    "crates/uffs-core",     # Query engine using Polars lazy API
    "crates/uffs-cli",      # Command-line interface
    "crates/uffs-tui",      # Terminal UI
    "crates/uffs-gui",      # Graphical UI (future)
]

# ============================================================================
# Workspace Package Metadata (inherited by all crates)
# ============================================================================
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/githubrobbi/UltraFastFileSearch-Rust"
authors = ["Robert Nio <50460704+githubrobbi@users.noreply.github.com>"]
keywords = ["mft", "ntfs", "file-search", "windows", "polars"]
categories = ["filesystem", "command-line-utilities"]

# ============================================================================
# Workspace Dependencies (shared across all crates)
# ============================================================================
[workspace.dependencies]
# ----- Internal Crates -----
uffs-polars = { path = "crates/uffs-polars" }
uffs-mft = { path = "crates/uffs-mft" }
uffs-core = { path = "crates/uffs-core" }

# ----- Polars (via facade crate) -----
polars = { version = "0.46", default-features = false }

# ----- Async Runtime -----
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# ----- Windows APIs (Windows only) -----
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_Storage",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Wmi",
] }
windows-core = "0.58"

# ----- Data Structures -----
bitflags = "2.6"
bitvec = "1.0"

# ----- Serialization -----
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ----- CLI -----
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
indicatif = "0.17"

# ----- TUI -----
ratatui = "0.29"
crossterm = "0.28"

# ----- Error Handling -----
thiserror = "2.0"
anyhow = "1.0"
miette = { version = "7.4", features = ["fancy"] }

# ----- Logging -----
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }

# ----- Time -----
chrono = "0.4"

# ----- Testing -----
criterion = "0.5"

# ============================================================================
# Workspace Profiles
# ============================================================================
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"

[profile.dev.package.polars]
opt-level = 2  # Optimize Polars even in dev for usable performance

[profile.dev.package."*"]
opt-level = 0

[profile.bench]
inherits = "release"
lto = "thin"
strip = "debuginfo"

